[gd_scene load_steps=7 format=2]

[ext_resource path="res://Double Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://Duck.tscn" type="PackedScene" id=2]
[ext_resource path="res://monogram.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 512, 300 )

[sub_resource type="DynamicFont" id=1]
size = 120
outline_size = 2
font_data = ExtResource( 3 )

[node name="Stage" type="Node2D"]
script = ExtResource( 4 )
wall_scene = ExtResource( 1 )

[node name="Duck" parent="." instance=ExtResource( 2 )]
position = Vector2( 256, 113 )

[node name="Screen Area" type="Area2D" parent="."]
visible = false
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Screen Area"]
position = Vector2( 512, 300 )
shape = SubResource( 2 )

[node name="Walls" type="Node2D" parent="."]

[node name="Wall Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 494.0
margin_top = 30.0
margin_right = 539.0
margin_bottom = 223.0
grow_horizontal = 2
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Duck" to="." method="_on_Duck_area_entered"]
[connection signal="area_exited" from="Duck" to="." method="_on_Duck_area_exited"]
[connection signal="body_shape_exited" from="Screen Area" to="." method="_on_Playground_body_shape_exited"]
[connection signal="timeout" from="Wall Timer" to="." method="_on_Wall_Timer_timeout"]
